# print-calculator

./: .gitignore  IMPLEMENTATION.md  PLAN.md  README.md  pyproject.toml
src/print_calc/: __init__.py  cli.py
src/print_calc/commands/: __init__.py
src/print_calc/core/: __init__.py  calculator.py
src/print_calc/output/: __init__.py
tests/: __init__.py  conftest.py  test_calculator.py
