[project]
name = "print-calc"
version = "0.1.0"
description = "3D Print Cost Calculator CLI"
readme = "README.md"
authors = [
    { name = "James Abels", email = "psikik1@psikik.com" }
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
print-calc = "print_calc.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.13.3",
]
